feature: clean up dummy
