# backend/src/app.ts
@@ -6,9 +6,8 @@ import swaggerUi from 'swagger-ui-express';
 import * as OpenApiValidator from 'express-openapi-validator';
 import cors from 'cors';
 import helmet from 'helmet';
-import { get } from './dummy';
 import {
-  getMailbox, getByID, postMail, moveMail,
+  getMailbox, // getByID, postMail, moveMail,
 } from './mail';
 
 // Custom error interface
@@ -49,14 +48,11 @@ app.use(
   }),
 );
 
-// Route for the dummy endpoint
-app.get('/v0/dummy', get);
-
 // Route for the mail endpoints
 app.get('/v0/mail', getMailbox);
-app.get('/v0/mail/:id', getByID);
-app.post('/v0/mail', postMail);
-app.put('/v0/mail/:id', moveMail);
+// app.get('/v0/mail/:id', getByID);
+// app.post('/v0/mail', postMail);
+// app.put('/v0/mail/:id', moveMail);
 
 // Error handling middleware
 app.use((err: CustomError, req: Request, res: Response) => {
